[package]
name = "rtop"
version = "1.0.0"
edition = "2021"
authors = ["Nicolas Pequeux"]
description = "System monitoring dashboard for terminal"
license = "MIT"
keywords = ["system", "monitoring", "top", "dashboard", "terminal"]
categories = ["command-line-utilities"]

[[bin]]
name = "rtop"
path = "src/main.rs"

[dependencies]
crossterm = "0.28"
ratatui = "0.29"
sysinfo = "0.32"
tokio = { version = "1.41", features = ["rt", "time"], default-features = false }
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
