[package]
name = "rtop"
version = "3.0.0"
edition = "2021"
authors = ["Nicolas Pequeux"]
description = "Advanced system monitoring dashboard with btop++-inspired features"
license = "MIT"
keywords = ["system", "monitoring", "top", "dashboard", "terminal", "gpu", "braille"]
categories = ["command-line-utilities"]

[[bin]]
name = "rtop"
path = "src/main.rs"

[dependencies]
crossterm = { version = "0.28", features = ["event-stream"] }
ratatui = "0.29"
sysinfo = "0.32"
tokio = { version = "1.41", features = ["rt", "time", "sync", "macros"], default-features = false }
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "5.0"
ctrlc = "3.4"
regex = "1.10"
battery = "0.7"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
